fix(Gallery): Item max size too big

--- a/src/components/common/Gallery/Gallery.module.scss
+++ b/src/components/common/Gallery/Gallery.module.scss
@@ -2,12 +2,12 @@ $row-count: 2;
 
 .Wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(max(10%, 6em), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(max(12%, 6em), 1fr));
   gap: var(--padding-primary);
 
   width: 100%;
 
   @media (min-width: 782px) {
-    grid-template-columns: repeat(auto-fit, minmax(max(30%, 4.5em), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(max(12%, 4.5em), 1fr));
   }
 }
